# pwdgenf

./: .gitignore  LICENSE.txt  README.md  pubspec.yaml
.github/workflows/: publish.yml  test.yml
android/app/: build.gradle.kts
assets/: config.example.toml
build_workflows/android/: build.ps1
build_workflows/debian-x86/: build.ps1
build_workflows/windows-x86/: .wxs  build.ps1  license.rtf  vcrt.ps1
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/: main_layout_widget.dart  my_translations.dart
lib/src/rust/api/: init.dart  (+6 more)
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/migration/: Cargo.toml
rust/migration/src/: lib.rs  m20260427_000001_create_table.rs
rust/src/: app_env.rs  clean_error.rs  factory.rs  frb_generated.rs  keystream_provider.rs  lib.rs  logger.rs
rust/src/api/: calculate_password.rs  create_acct_data.rs  delete_acct_data.rs  init.rs  mod.rs  read_acct_data.rs  read_all_acct_data.rs  update_acct_data.rs
rust/src/entities/: acct_data.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_pwdgenf.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_pwdgenf.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+32 files in other folders)
