[package]
name = "rust_lib_pwdgenf"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
migration = { path = "./migration" }

anyhow = "1.0.102"
chacha20 = "0.10.0"
chrono = "0.4.44"
cipher = "0.5.1"
flutter_rust_bridge = "=2.12.0"
sea-orm = { version = "2.0.0-rc.38", features = [
    "sqlx-sqlite",
    "runtime-tokio",
    "macros",
] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
time = { version = "0.3.47", features = ["formatting", "macros"] }
tokio = { version = "1.52.1", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = [
    "env-filter",
    "fmt",
    "time",
] }
thiserror = "2.0.18"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
